--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
     "name": "hoodoo",
     "description": "Front-end sass framework",
-    "keywords": ["Front-end", "sass", "css", "hoodoo", "flex grid", "responsive", "mobile-first", "web"],
+    "keywords": [
+        "Front-end",
+        "sass",
+        "css",
+        "hoodoo",
+        "flex grid",
+        "responsive",
+        "mobile-first",
+        "web"
+    ],
     "homepage": "https://designbycode.github.io/hoodoo",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "private": false,
     "dependencies": {
         "normalize-scss": "^7.0.1"
