--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hoodoo",
+    "name": "hoodoo-sass",
     "description": "Front-end sass framework",
     "keywords": [
         "Front-end",
@@ -15,6 +15,7 @@
     "version": "0.1.1",
     "private": false,
     "dependencies": {
+        "lodash": "^4.17.20",
         "normalize-scss": "^7.0.1"
     },
     "scripts": {
@@ -44,7 +45,10 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^3.1.0",
+        "highlight.js": "^10.4.1",
         "node-sass": "^4.14.1",
+        "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
@@ -53,9 +57,6 @@
         "react-scripts": "4.0.1",
         "react-spring": "^8.0.27",
         "react-transition-group": "^4.4.1",
-        "web-vitals": "^0.2.4",
-        "gh-pages": "^3.1.0",
-        "highlight.js": "^10.4.1",
-        "prop-types": "^15.7.2"
+        "web-vitals": "^0.2.4"
     }
 }
